[package]
name = "rm-backup"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/elenakrittik/rm-backup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
copy_dir = "0.1.3"
dirs = "5.0.1"
figment = { version = "0.10.12", features = ["toml", "env"] }
lexopt = "0.3.0"
log = "0.4.20"
merkle_hash = { version = "3.5.0", features = ["sha"] }
serde = { version = "1.0.193", features = ["derive"] }
simple-logging = "2.0.2"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.5.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
